--- a/sport-tournament-frontend/sport-frontend/src/forms/teamCreate/CreateTeam.css
+++ b/sport-tournament-frontend/sport-frontend/src/forms/teamCreate/CreateTeam.css
@@ -1,5 +1,4 @@
-/* Basic reset for margins and paddings */
-* {
+Basic reset for margins and paddings * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -30,7 +29,7 @@ button:hover {
   background-color: #0056b3;
 }
 
-form {
+/* form {
   background-color: white;
   padding: 20px;
   border-radius: 5px;
@@ -39,7 +38,7 @@ form {
   margin-top: 20px;
   width: 400px;
   align-items: center;
-}
+} */
 
 form div {
   margin-bottom: 15px;
@@ -72,7 +71,6 @@ select {
   border-radius: 5px;
   box-sizing: border-box;
   width: 200px;
-  /* margin-left: -20px; */
 }
 
 input[type="text"]:focus,
