--- a/sport-tournament-frontend/sport-frontend/src/forms/login/Login.css
+++ b/sport-tournament-frontend/sport-frontend/src/forms/login/Login.css
@@ -28,7 +28,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-left: 10%;
+  /* margin-left: 10%; */
 }
 
 label {
