--- a/sport-tournament-frontend/sport-frontend/src/forms/tournamentCreate/CreateTournamentForm.css
+++ b/sport-tournament-frontend/sport-frontend/src/forms/tournamentCreate/CreateTournamentForm.css
@@ -6,6 +6,7 @@
   border-radius: 8px;
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-top: 30%;
 }
 
 .form-row {
