--- a/sport-tournament-frontend/sport-frontend/src/forms/tournamentCreate/LocationCreate.css
+++ b/sport-tournament-frontend/sport-frontend/src/forms/tournamentCreate/LocationCreate.css
@@ -1,4 +1,4 @@
-.create-tournament-form-container {
+.create-location-form-container {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
@@ -6,65 +6,62 @@
   border-radius: 8px;
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  margin-top: 5%;
+  margin-top: 1%;
+  margin-bottom: 3%;
 }
 
-.form-row {
-  display: flex;
-  justify-content: space-between;
-}
-
-.form-group {
-  width: calc(50% - 10px);
-  margin-bottom: 15px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-input[type="text"],
-input[type="number"],
-input[type="date"] {
-  width: 100%;
-  padding: 8px;
-  font-size: 14px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-button {
+.btn-show {
   background-color: #4caf50;
   color: white;
   padding: 10px 20px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
-}
-
-button:hover {
-  background-color: #45a049;
-}
-
-button[type="submit"] {
-  width: 100%;
-}
-
-button[type="submit"]:hover {
-  background-color: #45a049;
-}
-
-.btn-show {
-  color: black;
-  background-color: transparent;
-  padding: 0px;
+  transition: background-color 0.3s;
 }
 
 .btn-show:hover {
-  color: black;
-  background-color: transparent;
+  background-color: #45a049;
+}
+
+.create-location-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
+
+.form-group input {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.btn-submit {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.btn-submit:hover {
+  background-color: #45a049;
+}
+
+p {
+  margin-top: 10px;
+  font-size: 14px;
+  color: #333;
 }
